--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,7 +1,7 @@
 defaults: 
   - _self_
-  - model: gpsconv
-  - dataset: zinc
+  - model: pointnet
+  - dataset: nuscenes_lidar
   - loss: mse
   - evaluator: loss_evaluator
   
@@ -17,13 +17,13 @@ log_model: False
 num_workers: 4
 num_threads: 4
 
-project_name: SeqForGraphs
+project_name: 3DMamba
 
 wandb:
   tags: []
   project: ${project_name}
   group: 'tmp'
-  name: '${model.wandb_name}_${dataset.name}_${now:%Y-%m-%d_%H-%M-%S}'
+  name: '${model.name}_${dataset.name}_${now:%Y-%m-%d_%H-%M-%S}'
 
 workdir: 
   root: '/home/${oc.env:USER}/data/${project_name}'
