--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,6 +1,6 @@
 defaults: 
   - _self_
-  - model: pointnet
+  - model: PCM
   - dataset: nuscenes_lidar
   - loss: mse
   - evaluator: loss_evaluator
@@ -11,7 +11,7 @@ log_frequency: 50
 evaluate_frequency: 1
 
 print: True
-use_wandb: False
+use_wandb: True
 log_model: False
 
 num_workers: 4
