--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,12 +1,12 @@
 defaults: 
   - _self_
   - model: PCM
-  - dataset: nuscenes_lidar
-  - loss: mse
-  - evaluator: loss_evaluator
+  - dataset: nuscenes_lidar_v1.0
+  - loss: cross_entropy
+  - evaluator: loss_accuracy_evaluator
   
 seed: 0
-num_epochs: 20
+num_epochs: 100
 log_frequency: 50
 evaluate_frequency: 1
 
@@ -24,6 +24,7 @@ wandb:
   project: ${project_name}
   group: 'tmp'
   name: '${model.name}_${dataset.name}_${now:%Y-%m-%d_%H-%M-%S}'
+  entity: 'vlr-3dmamba'
 
 workdir: 
   root: '/home/${oc.env:USER}/data/${project_name}'
