--- a/configs/dataset/nuscenes_lidar_v1.0.yaml
+++ b/configs/dataset/nuscenes_lidar_v1.0.yaml
@@ -4,7 +4,9 @@ params:
   _target_: dataloader.nuscenes.NuScenesLidarDataset
   path: ./data/nuscenes
   num_classes: 32
-  # max_samples: 16
   # max_points: 12000
-  train_version: v1.0-mini
+  max_samples: 1000
+  train_version: v1.0-trainval
+  # test_version: v1.0-test
+  # train_version: v1.0-mini
   test_version: v1.0-mini
