--- a/requirements.txt
+++ b/requirements.txt
@@ -67,9 +67,9 @@ smmap==5.0.1
 sympy==1.12
 termcolor==2.4.0
 threadpoolctl==3.4.0
-torch==2.2.2+cu118
-torchaudio==2.2.2+cu118
-torchvision==0.17.2+cu118
+torch
+torchaudio
+torchvision
 tqdm==4.66.2
 triton==2.2.0
 typing_extensions==4.9.0
