--- a/configs/model/PCM.yaml
+++ b/configs/model/PCM.yaml
@@ -1,7 +1,7 @@
 name: PCM
 
 params:
-  _target_: models.PCM.PCM.PointMambaSegmentation
+  _target_: models.segmentation.SegmentationHead
   in_channels: 5
   num_classes: ${dataset.params.num_classes}
   embedding_size: 1024 # 16 x 16, 16 is x2 dim_expansion
