change file names

--- a/configs/model/pointnet++.yaml
+++ b/configs/model/pointnet++.yaml
@@ -1,7 +1,7 @@
 name: PointNetPlus
 
 params:
-  _target_: models.pointnet++.pointnetplus_seg.PointNetPlusPlusSeg
+  _target_: models.pointnetplus.pointnetplus_seg.PointNetPlusPlusSeg
   num_classes: ${dataset.params.num_classes}
 
 
