--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,9 +1,9 @@
 defaults: 
   - _self_
   - model: PCM
-  - dataset: nuscenes_lidar_v1.0
+  - dataset: nuscenes_lidar
   - loss: cross_entropy
-  - evaluator: loss_accuracy_by_class
+  - evaluator: miou_evaluator
   
 seed: 33
 num_epochs: 100
