--- a/configs/model/PCM.yaml
+++ b/configs/model/PCM.yaml
@@ -10,8 +10,8 @@ params:
     _target_: models.PCM.PCM.PointMambaEncoder
     in_channels: ${..in_channels}
     embed_dim: 64
-    mamba_blocks: [1]
-    # mamba_blocks: [3]
+    # mamba_blocks: [1]
+    mamba_blocks: [3]
     dim_expansion: [1]
     pre_blocks: [1]
     pos_blocks: [0]
@@ -23,7 +23,7 @@ params:
     # prompt_num_per_order: 6
 
     mamba_layers_orders: ["xyz", "yxz", "zyx"] 
-    parallel_multihead: True
+    parallel_multihead: False
     # set to false for multiple mamba_blocks
     # parallel_multihead: False
 
