--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,17 +1,17 @@
 defaults: 
   - _self_
-  - model: pointnet++
+  - model: PCMSeg
   - dataset: nuscenes_lidar
   - loss: cross_entropy
   - evaluator: multiple
   
-seed: 33
+seed: 42
 num_epochs: 100
 log_frequency: 50
-evaluate_frequency: 1
+evaluate_frequency: 10
 
 print: True
-use_wandb: True
+use_wandb: False
 log_model: False
 
 num_workers: 4
